added JS code to generate random lyrics

--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
         <![endif]-->
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="msapplication-TileImage" content="/library/images/win8-tile-icon.png">
-        <title>H-hat Foundation 5 Boilerplate</title>
+        <title>Underground VS Mainstream</title>
         <link rel="stylesheet" href="library/css/app.css" />
         <script src="library/bower_components/modernizr/modernizr.js"></script>
         <!--[if lt IE 9]>
@@ -42,18 +42,18 @@
                     <div class="small-12 columns">
                         <!-- Underground Lyrics Area -->
                         <div class="lyricsUG small-12 columns">
-                            ALBUM ART
+                            <h3 id ="underground"></h3>
                         </div>
                         <!-- Underground Lyrics Area END-->
                         <!--    Button Area -->
                         <div class="buttonArea small-12  columns">
-                            <button class="generate">Get Lyrics</button>
+                            <button id="btn" class="generate">Get Lyrics</button>
                         </div>
                         <!--    Button Area End -->
 
                         <!--  MainStream Lyrics Area -->
                         <div class="lyricsMS small-12 columns">
-                            LYRICS
+                            <h3 id="mainstream"></h3>
                         </div>
                         <!--  MainStream Lyrics Area End-->
                     </div>
@@ -64,6 +64,10 @@
             </div>
         </div>
         <!--    Battle Ground End -->
+
+        <footer>
+         <p>Built with ♡ by <a href="https://twitter.com/Logan_Greer">Logan Greer</a><br/>In hopes that you seek out music beyond what is played on your radio</p>
+        </footer>
         
         <input type="hidden" id="txtDebug" name="txtDebug" value="true" />
         <script src="library/bower_components/jquery/dist/jquery.min.js"></script>
